refactor: extract attribute persistence [BACKLOG-50648]